--- a/Test2TreeStruct.csproj
+++ b/Test2TreeStruct.csproj
@@ -19,5 +19,13 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="7.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.5" />
 	</ItemGroup>
+  
+  <ItemGroup>
+    <Folder Include="Shared\Simple\" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <Content Remove="Shared\Simple\SimpleTreeNode.razor" />
+  </ItemGroup>
 
 </Project>
